@@ -20,17 +20,9 @@
     <properties>
         <java.version>17</java.version>
         <javafx.version>17.0.2</javafx.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
-		
-		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jdbc</artifactId>
-        </dependency>
-
         <!-- Spring Boot Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -93,7 +85,6 @@
 
     <build>
         <plugins>
-            <!-- Spring Boot Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -105,7 +96,7 @@
                         </exclude>
                     </excludes>
                     <mainClass>com.example.todoList.TodoListApplication</mainClass>
-                    <layout>JAR</layout>
+                    <layout>ZIP</layout>
                 </configuration>
                 <executions>
                     <execution>
@@ -116,7 +107,6 @@
                 </executions>
             </plugin>
 
-            <!-- Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -131,18 +121,6 @@
                             <version>1.18.34</version>
                         </path>
                     </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-
-            <!-- Surefire Plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        --add-modules javafx.controls,javafx.fxml
-                    </argLine>
-                    <excludedGroups>gui</excludedGroups>
                 </configuration>
             </plugin>
         </plugins>
